# cuCohcor

./: CMakeLists.txt  README.md
.cmake/: utils.cmake
examples/: cuCoherentOffsets.py
src/: Makefile  PyCuCohcor.cpp  PyCuCohcor.pyx  cuAmpcorChunk.cu  cuAmpcorChunk.h  cuAmpcorController.cu  cuAmpcorParameter.cu  cuAmpcorParameter.h  cuAmpcorUtil.h  cuArraysCopy.cu  cuCorrFrequency.cu  cuCorrFrequency.h  cuCorrNormalization.cu  cuCorrNormalizationSAT.cu  cuCorrNormalizer.cu  cuCorrNormalizer.h  cuWindowFilter.cu  cuWindowFilter.h  cudaUtil.h  float2.h  setup.py
